--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -2365,9 +2365,15 @@
  	 	 	}
  	 	},
  	 	"cali": {
- 	 	 	"name": {
- 	 	 	 	"trans": "Kalibrasyon demeti (%150)",
- 	 	 	 	"eng": "Calibration bundle (200%)"
+ 	 	 	"namev2": {
+ 	 	 	 	"trans": "Kalibrasyon demeti (%60)",
+ 	 	 	 	"eng": "Calibration bundle (60%)"
+ 	 	 	}
+ 	 	},
+ 	 	"cali2": {
+ 	 	 	"namev2": {
+ 	 	 	 	"trans": "Kalibrasyon demeti (%100)",
+ 	 	 	 	"eng": "Calibration bundle (100%)"
  	 	 	}
  	 	},
  	 	"cycle": {
