--- a/contribution/lang/arr.json
+++ b/contribution/lang/arr.json
@@ -2365,9 +2365,15 @@
  	 	 	}
  	 	},
  	 	"cali": {
- 	 	 	"name": {
- 	 	 	 	"trans": "Calibration bundle (200%)",
- 	 	 	 	"eng": "Calibration bundle (200%)"
+ 	 	 	"namev2": {
+ 	 	 	 	"trans": "Calibration bundle (60%)",
+ 	 	 	 	"eng": "Calibration bundle (60%)"
+ 	 	 	}
+ 	 	},
+ 	 	"cali2": {
+ 	 	 	"namev2": {
+ 	 	 	 	"trans": "Calibration bundle (100%)",
+ 	 	 	 	"eng": "Calibration bundle (100%)"
  	 	 	}
  	 	},
  	 	"cycle": {
