--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -2365,9 +2365,15 @@
  	 	 	}
  	 	},
  	 	"cali": {
- 	 	 	"name": {
- 	 	 	 	"trans": "校準禮包（150％）",
- 	 	 	 	"eng": "Calibration bundle (200%)"
+ 	 	 	"namev2": {
+ 	 	 	 	"trans": "校準禮包（60％）",
+ 	 	 	 	"eng": "Calibration bundle (60%)"
+ 	 	 	}
+ 	 	},
+ 	 	"cali2": {
+ 	 	 	"namev2": {
+ 	 	 	 	"trans": "校準禮包（100％）",
+ 	 	 	 	"eng": "Calibration bundle (100%)"
  	 	 	}
  	 	},
  	 	"cycle": {
