--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2366,13 +2366,13 @@
  	 	},
  	 	"cali": {
  	 	 	"namev2": {
- 	 	 	 	"trans": "교정 번들 (60%)",
+ 	 	 	 	"trans": "교정 패키지 (60%)",
  	 	 	 	"eng": "Calibration bundle (60%)"
  	 	 	}
  	 	},
  	 	"cali2": {
  	 	 	"namev2": {
- 	 	 	 	"trans": "교정 번들 (100%)",
+ 	 	 	 	"trans": "교정 패키지 (100%)",
  	 	 	 	"eng": "Calibration bundle (100%)"
  	 	 	}
  	 	},
