fix dumpling translation

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "الزلابية",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "هذه الزلابية لا تشبه أي شيء آخر. مصنوعة من الحب والرعاية من الين ، تمتلئ هذه الجيوب اللذيذة من الخير بأرقى المكونات وطهيها إلى الكمال",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "كيكة الأرز",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "كعكة الأرز اللزجة والحلوة هي طعام تقليدي للعام القمري الجديد ويعتقد أنه يجلب حظًا سعيدًا وازدهارًا",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
