--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "Pangsit",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "Pangsit ini tidak seperti yang lain. Dibuat dengan cinta dan perawatan oleh yen, kantong -kantong kebaikan yang lezat ini diisi dengan bahan -bahan terbaik dan dimasak dengan sempurna. \\ N Pulihkan ${percent}% Kesehatan setelah dikonsumsi",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Kue beras",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Kue Beras Sticky and Sweet adalah makanan tahun baru bulan baru dan diyakini membawa keberuntungan dan kemakmuran. \\ N pulihkan ${percent}% perisai setelah dikonsumsi",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
