--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "Rijsttaart",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "Deze knoedels zijn anders dan alle andere. Gemaakt met liefde en zorg door yen, deze heerlijke zakken van goedheid zijn gevuld met de beste ingrediënten en tot in de perfectie gekookt. \\ N herstel ${percent}% gezondheid na consumptie",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Rijsttaart",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sticky en Sweet Rice Cake is een traditioneel maan -nieuwjaarsvoedsel en wordt verondersteld geluk en welvaart te brengen. \\ N herstel ${percent}% schild bij consumptie",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
