--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "Pierogi",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "Te pierogi są inaczej niż inne. Te pyszne kieszenie dobroci wykonane z miłości i troski są wypełnione najlepszymi składnikami i gotowane do perfekcji",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Ciasto ryżowe",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Lepkie i słodkie ciasto ryżowe to tradycyjne pokarm noworoczny księżycowy i uważa się, że przynosi szczęście i dobrobyt",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
