--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "dumplings",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "Esses bolinhos são diferentes de qualquer outro. Feito com amor e carinho por iene, esses deliciosos bolsos de bondade estão cheios dos melhores ingredientes e cozidos com perfeição. \\ N recuperar ${percent}% de saúde após o consumo",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Bolo de arroz",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Bolo de arroz pegajoso e doce é uma comida tradicional de ano novo lunar e acredita -se que traga boa sorte e prosperidade",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
