--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "เกี๊ยว",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "เกี๊ยวเหล่านี้แตกต่างจากอื่น ๆ ทำด้วยความรักและการดูแลโดยเยนความดีแสนอร่อยเหล่านี้เต็มไปด้วยส่วนผสมที่ดีที่สุดและปรุงเพื่อความสมบูรณ์แบบ \\ n กู้คืน ${percent}% สุขภาพเมื่อบริโภค",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "เค้กข้าว",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "เค้กข้าวเหนียวและหวานเป็นอาหารปีใหม่ทางจันทรคติแบบดั้งเดิมและเชื่อว่าจะนำโชคดีและความเจริญรุ่งเรือง \\ n กู้คืน ${percent}% โล่เมื่อบริโภค",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
