--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -5020,6 +5020,19 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "Dumplings",
+ 	 	 	 	"eng": "Dumplings"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Ang malagkit at matamis na cake ng bigas ay isang tradisyunal na pagkain ng bagong taon at pinaniniwalaan na magdala ng magandang kapalaran at kasaganaan. \\ n mabawi ang ${percent}% na kalasag sa pagkonsumo",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Rice cake",
  	 	 	 	"eng": "Rice Cake"
  	 	 	},
  	 	 	"description": {
