--- a/contribution/lang/arr.json
+++ b/contribution/lang/arr.json
@@ -5020,6 +5020,19 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "Rice Cake",
+ 	 	 	 	"eng": "Dumplings"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Rice Cake",
  	 	 	 	"eng": "Rice Cake"
  	 	 	},
  	 	 	"description": {
