--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -5020,13 +5020,26 @@
  	 	"dumplings": {
  	 	 	"name": {
  	 	 	 	"trans": "Knedle",
- 	 	 	 	"eng": "Rice Cake"
+ 	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
  	 	 	 	"trans": "Tieto knedle sú na rozdiel od iných. Vyrobené z lásky a starostlivosti Yen, tieto chutné vrecká dobroty sú naplnené najlepšími ingredienciami a varí sa k dokonalosti",
+ 	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
+ 	 	 	}
+ 	 	},
+ 	 	"riceCake": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Ryžový koláč",
+ 	 	 	 	"eng": "Rice Cake"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"percent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "lepkavý a sladký ryžový koláč je tradičné lunárne novoročné jedlo a verí sa, že prináša šťastie a prosperitu",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
