--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -720,7 +720,18 @@
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
  	 	 	 	"trans": "Şu anda kapların kilidini açamazsınız",
- 	 	 	 	"eng": "You cannot unlock containers while right now"
+ 	 	 	 	"eng": "You cannot unlock containers right now"
+ 	 	 	},
+ 	 	 	"openRedEnvelop": {
+ 	 	 	 	"trans": "Açık",
+ 	 	 	 	"eng": "Open"
+ 	 	 	},
+ 	 	 	"cannotOpenRedEnvelopNotIdle": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Şu anda ${itemName} açamazsınız",
+ 	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
  	 	"itemDetails": {
@@ -3566,7 +3577,7 @@
  	 	},
  	 	"donation9": {
  	 	 	"trans": "Prestij",
- 	 	 	"eng": "Prestige"
+ 	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
  	 	 	"trans": "Prestij",
@@ -3898,7 +3909,7 @@
  	 	 	"benefits": {
  	 	 	 	"1": {
  	 	 	 	 	"trans": "\"Prestij\" Bağış Başlığı",
- 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
  	 	 	 	 	"trans": "Profil Resim Özelleştirme Kilidini Aç",
