--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -720,7 +720,18 @@
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
  	 	 	 	"trans": "Bạn không thể mở khóa các thùng chứa trong khi ngay bây giờ",
- 	 	 	 	"eng": "You cannot unlock containers while right now"
+ 	 	 	 	"eng": "You cannot unlock containers right now"
+ 	 	 	},
+ 	 	 	"openRedEnvelop": {
+ 	 	 	 	"trans": "Mở",
+ 	 	 	 	"eng": "Open"
+ 	 	 	},
+ 	 	 	"cannotOpenRedEnvelopNotIdle": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Bạn không thể mở ${itemName} ngay bây giờ",
+ 	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
  	 	"itemDetails": {
@@ -3566,7 +3577,7 @@
  	 	},
  	 	"donation9": {
  	 	 	"trans": "Uy tín",
- 	 	 	"eng": "Prestige"
+ 	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
  	 	 	"trans": "Uy tín",
@@ -3898,7 +3909,7 @@
  	 	 	"benefits": {
  	 	 	 	"1": {
  	 	 	 	 	"trans": "Tiêu đề quyên góp \"uy tín\"",
- 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
  	 	 	 	 	"trans": "Mở khóa tùy chỉnh ảnh hồ sơ",
