--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -720,7 +720,18 @@
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
  	 	 	 	"trans": "Vous ne pouvez pas déverrouiller les conteneurs en ce moment",
- 	 	 	 	"eng": "You cannot unlock containers while right now"
+ 	 	 	 	"eng": "You cannot unlock containers right now"
+ 	 	 	},
+ 	 	 	"openRedEnvelop": {
+ 	 	 	 	"trans": "Ouvrir",
+ 	 	 	 	"eng": "Open"
+ 	 	 	},
+ 	 	 	"cannotOpenRedEnvelopNotIdle": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Vous ne pouvez pas ouvrir ${itemName} maintenant",
+ 	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
  	 	"itemDetails": {
@@ -3566,7 +3577,7 @@
  	 	},
  	 	"donation9": {
  	 	 	"trans": "Prestige",
- 	 	 	"eng": "Prestige"
+ 	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
  	 	 	"trans": "Prestige",
@@ -3898,7 +3909,7 @@
  	 	 	"benefits": {
  	 	 	 	"1": {
  	 	 	 	 	"trans": "Titre de don \"Prestige\"",
- 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
  	 	 	 	 	"trans": "Déverrouiller la personnalisation de l'image du profil",
