--- a/contribution/lang/tl.json
+++ b/contribution/lang/tl.json
@@ -720,7 +720,18 @@
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
  	 	 	 	"trans": "Hindi mo mai -unlock ang mga lalagyan habang ngayon",
- 	 	 	 	"eng": "You cannot unlock containers while right now"
+ 	 	 	 	"eng": "You cannot unlock containers right now"
+ 	 	 	},
+ 	 	 	"openRedEnvelop": {
+ 	 	 	 	"trans": "Buksan",
+ 	 	 	 	"eng": "Open"
+ 	 	 	},
+ 	 	 	"cannotOpenRedEnvelopNotIdle": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Hindi mo mabubuksan ang ${itemName} ngayon",
+ 	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
  	 	"itemDetails": {
@@ -3566,7 +3577,7 @@
  	 	},
  	 	"donation9": {
  	 	 	"trans": "Prestige",
- 	 	 	"eng": "Prestige"
+ 	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
  	 	 	"trans": "Prestige",
@@ -3898,7 +3909,7 @@
  	 	 	"benefits": {
  	 	 	 	"1": {
  	 	 	 	 	"trans": "\"Prestige\" pamagat ng donasyon",
- 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
  	 	 	 	 	"trans": "I -unlock ang pagpapasadya ng larawan ng profile",
