--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -720,7 +720,18 @@
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
  	 	 	 	"trans": "您現在無法解鎖容器",
- 	 	 	 	"eng": "You cannot unlock containers while right now"
+ 	 	 	 	"eng": "You cannot unlock containers right now"
+ 	 	 	},
+ 	 	 	"openRedEnvelop": {
+ 	 	 	 	"trans": "打開",
+ 	 	 	 	"eng": "Open"
+ 	 	 	},
+ 	 	 	"cannotOpenRedEnvelopNotIdle": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "您現在不能立即打開${itemName}",
+ 	 	 	 	"eng": "You cannot open ${itemName} right now"
  	 	 	}
  	 	},
  	 	"itemDetails": {
@@ -3565,8 +3576,8 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation9": {
- 	 	 	"trans": "至尊",
- 	 	 	"eng": "Prestige"
+ 	 	 	"trans": "賽博兔兔",
+ 	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
  	 	 	"trans": "至尊",
@@ -3589,7 +3600,7 @@
  	 	 	"eng": "Cyberdragon"
  	 	},
  	 	"donation15": {
- 	 	 	"trans": "至尊",
+ 	 	 	"trans": "電驅駭客",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -3897,8 +3908,8 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "「至尊」贊助頭銜",
- 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	 	"trans": "「賽博兔兔」贊助頭銜",
+ 	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
  	 	 	 	 	"trans": "自訂個人檔案圖片",
@@ -4137,7 +4148,7 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“聲望”捐贈標題",
+ 	 	 	 	 	"trans": "“電驅駭客”捐贈標題",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
