--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -3600,7 +3600,7 @@
  	 	 	"eng": "Cyberdragon"
  	 	},
  	 	"donation15": {
- 	 	 	"trans": "電驅駭客",
+ 	 	 	"trans": "電馭駭客",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -5030,7 +5030,7 @@
  	 	},
  	 	"dumplings": {
  	 	 	"name": {
- 	 	 	 	"trans": "年糕",
+ 	 	 	 	"trans": "水餃",
  	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
