--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -5030,7 +5030,7 @@
  	 	},
  	 	"dumplings": {
  	 	 	"name": {
- 	 	 	 	"trans": "年糕",
+ 	 	 	 	"trans": "餃子",
  	 	 	 	"eng": "Dumplings"
  	 	 	},
  	 	 	"description": {
