--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -5037,7 +5037,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "이 만두는 다른 것과는 다릅니다. 엔의 사랑과 보살핌으로 만들어진이 맛있는 선한 주머니는 최고의 재료로 가득 차 있으며 완벽하게 요리됩니다. \\ n 소비시 건강 ${percent}% 건강",
+ 	 	 	 	"trans": "다른 만두와는 비교를 거부하는, 엔의 사랑과 보살핌으로 만들어진 맛있는 만두입니다. 완벽한 레시피로, 최고의 재료만 넣어 만들었습니다! 섭취 시 ${percent}%의 체력을 회복합니다.",
  	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
  	 	 	}
  	 	},
