--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2865,7 +2865,7 @@
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"name": {
- 	 	 	 	"trans": "교정 안전장치",
+ 	 	 	 	"trans": "교정 파괴확률 감소",
  	 	 	 	"eng": "Calibration Safety"
  	 	 	},
  	 	 	"description": {
