Translation updated with new content

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -249,11 +249,11 @@
  	 	 	},
  	 	 	"upgradeVaultModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Aggiornamento Vault",
+ 	 	 	 	 	"trans": "Migliora Cassaforte",
  	 	 	 	 	"eng": "Upgrade Vault"
  	 	 	 	},
  	 	 	 	"confirm": {
- 	 	 	 	 	"trans": "Aggiornamento",
+ 	 	 	 	 	"trans": "Migliora",
  	 	 	 	 	"eng": "Upgrade"
  	 	 	 	}
  	 	 	},
@@ -719,7 +719,7 @@
  	 	 	 	"eng": "Unlock Container"
  	 	 	},
  	 	 	"cantOpenContainerNotIdleV2": {
- 	 	 	 	"trans": "Non puoi sbloccare i contenitori mentre adesso",
+ 	 	 	 	"trans": "Non puoi sbloccare contenitori in questo momento",
  	 	 	 	"eng": "You cannot unlock containers right now"
  	 	 	},
  	 	 	"openRedEnvelop": {
@@ -1706,7 +1706,7 @@
  	 	},
  	 	"confirmModal": {
  	 	 	"defaultConfirm": {
- 	 	 	 	"trans": "Confermare",
+ 	 	 	 	"trans": "Conferma",
  	 	 	 	"eng": "Confirm"
  	 	 	}
  	 	},
@@ -2056,7 +2056,7 @@
  	 	 	 	"eng": "Links"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Qui puoi trovare tutti i nostri link sui social media, vieni a connetterti con la straordinaria comunità!",
+ 	 	 	 	"trans": "Qui puoi trovare tutti i nostri link sui social, vieni a connetterti con la straordinaria comunità!",
  	 	 	 	"eng": "Here you can find all our social media links, come and connect with the amazing community!"
  	 	 	},
  	 	 	"reportBug": {
@@ -2356,11 +2356,11 @@
  	 	 	"vars": [
  	 	 	 	"time"
  	 	 	],
- 	 	 	"trans": "Disponibile di nuovo in ${time}",
+ 	 	 	"trans": "Disponibile di nuovo tra ${time}",
  	 	 	"eng": "Available again in ${time}"
  	 	},
  	 	"free": {
- 	 	 	"trans": "Libera",
+ 	 	 	"trans": "Gratis",
  	 	 	"eng": "Free"
  	 	},
  	 	"luna": {
@@ -2371,26 +2371,26 @@
  	 	},
  	 	"skip": {
  	 	 	"name": {
- 	 	 	 	"trans": "Salta il pacchetto di fornitura",
+ 	 	 	 	"trans": "Pacchetto di skip",
  	 	 	 	"eng": "Skip supply bundle"
  	 	 	}
  	 	},
  	 	"cali": {
  	 	 	"namev2": {
- 	 	 	 	"trans": "Fascio di calibrazione (60%)",
+ 	 	 	 	"trans": "Pacchetto di calibrazione (60%)",
  	 	 	 	"eng": "Calibration bundle (60%)"
  	 	 	}
  	 	},
  	 	"cali2": {
  	 	 	"namev2": {
- 	 	 	 	"trans": "Fascio di calibrazione (100%)",
+ 	 	 	 	"trans": "Pacchetto di calibrazione (100%)",
  	 	 	 	"eng": "Calibration bundle (100%)"
  	 	 	}
  	 	},
  	 	"cycle": {
  	 	 	"daily": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Quotidiana",
+ 	 	 	 	 	"trans": "Quotidiano",
  	 	 	 	 	"eng": "Daily"
  	 	 	 	},
  	 	 	 	"description": {
@@ -2400,7 +2400,7 @@
  	 	 	},
  	 	 	"weekly": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "settimanalmente",
+ 	 	 	 	 	"trans": "settimanale",
  	 	 	 	 	"eng": "Weekly"
  	 	 	 	},
  	 	 	 	"description": {
@@ -2887,7 +2887,7 @@
  	 	},
  	 	"containerLegendaryDrop": {
  	 	 	"name": {
- 	 	 	 	"trans": "Legendary Chance",
+ 	 	 	 	"trans": "Probabilità drop Leggendario",
  	 	 	 	"eng": "Legendary Chance"
  	 	 	}
  	 	},
@@ -3250,7 +3250,7 @@
  	},
  	"priceTag": {
  	 	"free": {
- 	 	 	"trans": "LIBERA",
+ 	 	 	"trans": "Gratis",
  	 	 	"eng": "FREE"
  	 	}
  	},
@@ -3576,7 +3576,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation9": {
- 	 	 	"trans": "Prestigio",
+ 	 	 	"trans": "Cyberconiglietto",
  	 	 	"eng": "CyberBunny"
  	 	},
  	 	"donation10": {
@@ -3596,7 +3596,7 @@
  	 	 	"eng": "CyberFrost"
  	 	},
  	 	"donation14": {
- 	 	 	"trans": "Cyberdragon",
+ 	 	 	"trans": "Cyberdrago",
  	 	 	"eng": "Cyberdragon"
  	 	},
  	 	"donation15": {
@@ -3908,7 +3908,7 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Titolo di donazione \"Prestigio\"",
+ 	 	 	 	 	"trans": "Titolo di donazione \"Cyberconiglietto\"",
  	 	 	 	 	"eng": "\"CyberBunny\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4068,7 +4068,7 @@
  	 	"donation13": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Titolo di donazione \"cybergelo\"",
+ 	 	 	 	 	"trans": "Titolo di donazione \"Cybergelo\"",
  	 	 	 	 	"eng": "\"CyberFrost\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4108,7 +4108,7 @@
  	 	"donation14": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Titolo di donazione \"cyberdragon\"",
+ 	 	 	 	 	"trans": "Titolo di donazione \"Cyberdrago\"",
  	 	 	 	 	"eng": "\"Cyberdragon\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4116,11 +4116,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Frame di chat di Capodanno lunare (con animazione)",
+ 	 	 	 	 	"trans": "Cornice chat a tema Capodanno lunare (con animazione)",
  	 	 	 	 	"eng": "Lunar new year chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Profilo incorniciato di Capodanno lunare (con animazione)",
+ 	 	 	 	 	"trans": "Cornice profilo a tema Capodanno lunare (con animazione)",
  	 	 	 	 	"eng": "Lunar new year Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -4132,15 +4132,15 @@
  	 	 	 	 	"eng": "Dragon decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Personalizza il motto di gang",
+ 	 	 	 	 	"trans": "Personalizza il motto della gang",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Personalizza l'immagine della banda",
+ 	 	 	 	 	"trans": "Personalizza l'immagine della gang",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Altro in arrivo nel futuro aggiornamento",
+ 	 	 	 	 	"trans": "Altro in arrivo nei futuri aggiornamenti",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4148,7 +4148,7 @@
  	 	"donation15": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "Titolo di donazione \"prestigio\"",
+ 	 	 	 	 	"trans": "Titolo di donazione \"Prestigio\"",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -4156,11 +4156,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Frame di chat verde neon (con animazione)",
+ 	 	 	 	 	"trans": "Cornice chat verde neon (con animazione)",
  	 	 	 	 	"eng": "Neon green chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "Profilo incorniciato neon verde (con animazione)",
+ 	 	 	 	 	"trans": "Cornice profilo verde neon (con animazione)",
  	 	 	 	 	"eng": "Neon green Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -4168,19 +4168,19 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "Decorazione del codice a barre sul profilo",
+ 	 	 	 	 	"trans": "Decorazione con codice a barre sul profilo",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "Personalizza il motto di gang",
+ 	 	 	 	 	"trans": "Personalizza il motto della gang",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Personalizza l'immagine della banda",
+ 	 	 	 	 	"trans": "Personalizza l'immagine della gang",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Altro in arrivo nel futuro aggiornamento",
+ 	 	 	 	 	"trans": "Altro in arrivo nei futuri aggiornamenti",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4255,7 +4255,7 @@
  	"item": {
  	 	"unknownEquipment": {
  	 	 	"name": {
- 	 	 	 	"trans": "Attrezzatura sconosciuta",
+ 	 	 	 	"trans": "Equipaggiamento sconosciuto",
  	 	 	 	"eng": "Unknown Equipment"
  	 	 	}
  	 	},
@@ -5014,7 +5014,7 @@
  	 	 	 	"eng": "Red Envelope"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Una busta rossa con un sigillo digitale dorato su di esso. Sembra che contenga una sorta di valuta",
+ 	 	 	 	"trans": "Una busta rossa con sopra un sigillo digitale dorato. Sembra che contenga una sorta di valuta",
  	 	 	 	"eng": "A red envelope with a golden digital seal on it. looks like it contains some sort of currency"
  	 	 	}
  	 	},
@@ -5024,7 +5024,7 @@
  	 	 	 	"eng": "Golden Coin"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Una moneta dorata con un'incisione di un drago. La valuta fisica è molto rara da vedere in questi giorni, dovrebbe essere in grado di acquistare qualcosa di buono nel distretto di mercato",
+ 	 	 	 	"trans": "Una moneta dorata con l'incisione di un drago. Le valute fisiche sono molto rare da vedere in questi tempi, con questa dovrebbe essere possibile acquistarci qualcosa di buono al mercato.",
  	 	 	 	"eng": "A golden coin with a engraving of a dragon on it. physical currency is very rare to see these days, should be able to buy something good with it in the market district"
  	 	 	}
  	 	},
@@ -5037,7 +5037,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Questi gnocchi sono diversi da qualsiasi altro. Realizzati con amore e cura da Yen, queste deliziose tasche di bontà sono piene di ingredienti migliori e cotti alla perfezione. \\ N Recupera ${percent}% salute al momento",
+ 	 	 	 	"trans": "Questi ravioli non sono come gli altri. Realizzati con amore e cura da Yen, queste deliziose sacche di bontà sono ripiene degli ingredienti migliori e cotti alla perfezione. \\n Se consumati permettono di recuperare il ${percent}% di salute",
  	 	 	 	"eng": "These dumplings are unlike any other. Made with love and care by Yen, these delicious pockets of goodness are filled with the finest ingredients and cooked to perfection.\\n recover ${percent}% health upon consumption"
  	 	 	}
  	 	},
@@ -5050,7 +5050,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "La torta di riso appiccicosa e dolce è un cibo tradizionale di Capodanno lunare e si ritiene che porti buona fortuna e prosperità",
+ 	 	 	 	"trans": "L'appiccicosa e dolce torta di riso è un cibo tradizionale di Capodanno Lunare e si ritiene che porti buona fortuna e prosperità.\\n Se consumata permette di recuperare il ${percent}% di scudo",
  	 	 	 	"eng": "sticky and sweet rice cake is a traditional Lunar New Year food and is believed to bring good luck and prosperity.\\n recover ${percent}% shield upon consumption"
  	 	 	}
  	 	},
@@ -5063,7 +5063,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Realizzato con amore e cura di Yen. Pasto delizioso e nutriente che garantirà al giocatore -${percent}% danni da 20 minuti quando mangiato. Perfetto per affrontare sfide difficili e conquistare nemici difficili, il sushi di Yen è un must per qualsiasi avventuriero.",
+ 	 	 	 	"trans": "Realizzato con amore e cura da Yen. Se consumato, questo pasto delizioso e nutriente garantisce al giocatore -${percent}% danni per 20 minuti. Perfetto per affrontare sfide difficili e vincere nemici difficili, il sushi di Yen è d'obbligo per qualsiasi avventuriero.",
  	 	 	 	"eng": "Made with love and care by Yen. delicious and nourishing meal that will grant the player -${percent}% damage taken for 20 minutes when eaten. Perfect for tackling tough challenges and conquering difficult foes, Yen\\'s sushi is a must - have for any adventurer."
  	 	 	}
  	 	},
@@ -5764,14 +5764,14 @@
  	 	"lunar": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Welcome, our family is always excited to help you find the perfect tech gear."
+ 	 	 	 	 	"Benvenuto, la nostra famiglia è sempre entusiasta di aiutarti a trovare l'attrezzatura tecnologica perfetta."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome, our family is always excited to help you find the perfect tech gear."
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Yen's Corner Store",
+ 	 	 	 	"trans": "Negozio all'angolo di Yen",
  	 	 	 	"eng": "Yen's Corner Store"
  	 	 	},
  	 	 	"npcName": {
@@ -6169,7 +6169,7 @@
  	 	},
  	 	"lunarLoot": {
  	 	 	"name": {
- 	 	 	 	"trans": "Busta rossa",
+ 	 	 	 	"trans": "Busta Rossa",
  	 	 	 	"eng": "Red Envelope"
  	 	 	}
  	 	},
@@ -7138,7 +7138,7 @@
  	},
  	"bundleDetailsModal": {
  	 	"bundle": {
- 	 	 	"trans": "fascio",
+ 	 	 	"trans": "pacchetto",
  	 	 	"eng": "bundle"
  	 	},
  	 	"description": {
@@ -7149,18 +7149,18 @@
  	 	 	"vars": [
  	 	 	 	"time"
  	 	 	],
- 	 	 	"trans": "Disponibile di nuovo in ${time}",
+ 	 	 	"trans": "Disponibile di nuovo tra ${time}",
  	 	 	"eng": "Available again in ${time}"
  	 	},
  	 	"freeButton": {
  	 	 	"text": {
- 	 	 	 	"trans": "Reclamo gratuitamente",
+ 	 	 	 	"trans": "Riscatta gratuitamente",
  	 	 	 	"eng": "Claim for free"
  	 	 	}
  	 	},
  	 	"purchaseButton": {
  	 	 	"text": {
- 	 	 	 	"trans": "Acquistare",
+ 	 	 	 	"trans": "Acquista",
  	 	 	 	"eng": "Purchase"
  	 	 	}
  	 	}
@@ -7245,11 +7245,11 @@
  	},
  	"lunarPromo": {
  	 	"title": {
- 	 	 	"trans": "Felice nuovo anno Lunare!",
+ 	 	 	"trans": "Felice Capodanno Lunare!",
  	 	 	"eng": "Happy Lunar New year!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "Il capodanno lunare è qui e festeggiamo a Shang-ri-la con un evento speciale. Unisciti a noi mentre abbracciamo l'inizio di un nuovo anno, pieno di tradizioni, gioia e unione.",
+ 	 	 	"trans": "Il capodanno lunare è arrivato, e festeggiamo a Shangri-La con un evento speciale. Unisciti a noi mentre accogliamo l'inizio di un nuovo anno, pieno di tradizioni, gioia e unione.",
  	 	 	"eng": "The lunar new year is here, and we're celebrating in Shang-ri-la with a special event. Join us as we embrace the start of a new year, filled with traditions, joy, and togetherness."
  	 	},
  	 	"desc2": {
@@ -7259,7 +7259,7 @@
  	 	 	 	"llcName",
  	 	 	 	"npcName"
  	 	 	],
- 	 	 	"trans": "${npcShopName} è ora aperto per affari! Puoi usare ${coinItem} per acquistare varie cucine speciali e ${llcName} da ${npcName}!",
+ 	 	 	"trans": "Il ${npcShopName} è ora aperto per affari! Puoi usare ${coinItem} per acquistare da ${npcName} varie specialità culinarie e ${llcName}!",
  	 	 	"eng": "${npcShopName} is now open for business! You can use ${coinItem} to purchase various special cuisines and ${llcName} from ${npcName}!"
  	 	},
  	 	"desc3": {
@@ -7267,7 +7267,7 @@
  	 	 	 	"envelopItem",
  	 	 	 	"coinItem"
  	 	 	],
- 	 	 	"trans": "Non è nuovo anno se ${envelopItem} non è coinvolto! Enemies e Ai Core Auto Farm lasciaranno cadere ${envelopItem}, aprili per ricevere un importo casuale di ${coinItem}!",
+ 	 	 	"trans": "Non è un nuovo anno se non c'è la ${envelopItem}! I nemici e le farm con Nuclei IA avranno la possibilità di lasciare una ${envelopItem}, aprila per ricevere una quantità casuale di ${coinItem}!",
  	 	 	"eng": "It's not new year if ${envelopItem} is not involved! Enemies and AI Core auto farm will drop ${envelopItem}, open them to receive random amount of ${coinItem}!"
  	 	},
  	 	"desc4": {
@@ -7275,11 +7275,11 @@
  	 	 	 	"envelopItem",
  	 	 	 	"npcShop"
  	 	 	],
- 	 	 	"trans": "Ora puoi ricevere 3 ${envelopItem} in ${npcShop} ogni giorno!",
+ 	 	 	"trans": "Ogni giorno puoi ricevere 3 ${envelopItem} al ${npcShop}!",
  	 	 	"eng": "You can now receive 3 free ${envelopItem} in ${npcShop} every day!"
  	 	},
  	 	"desc5": {
- 	 	 	"trans": "Aggiunto due nuovi telai di chat limitati e emblemi, acquistabili solo durante il periodo di eventi.",
+ 	 	 	"trans": "Aggiunte per un tempo limitato due nuove cornici di chat ed emblemi, acquistabili solo durante il periodo dell'evento.",
  	 	 	"eng": "Added two new time limited chat frame and emblems, only purchasable during event period."
  	 	}
  	},
